qmk: Update config for latest qmk

--- a/qmk/.config/qmk/qmk.ini
+++ b/qmk/.config/qmk/qmk.ini
@@ -1,8 +1,8 @@
 [user]
 keyboard = splitkb/aurora/sweep/rev1
-keymap = default
+keymap = daporter
 name = daporter
-overlay_dir = ~/projects/qmk_userspace
+overlay_dir = /home/david/qmk_userspace
 qmk_home = ~/src/qmk_firmware
 
 [find]
@@ -20,6 +20,62 @@ parallel = 8
 [config]
 
 [console]
+
+[c2json]
+
+[docs]
+
+[flash]
+
+[format_c]
+
+[format_python]
+
+[format_text]
+
+[generate_autocorrect_data]
+
+[generate_compilation_database]
+
+[generate_develop_pr_list]
+
+[generate_dfu_header]
+
+[generate_info_json]
+
+[generate_make_dependencies]
+
+[git_submodule]
+
+[info]
+
+[license_check]
+
+[lint]
+
+[kle2json]
+
+[list_keymaps]
+
+[list_layouts]
+
+[new_keyboard]
+
+[new_keymap]
+
+[painter_convert_graphics]
+
+[painter_make_font_image]
+
+[painter_convert_font_image]
+
+[test_c]
+
+[userspace_add]
+
+[userspace_remove]
+
+[userspace_compile]
 
 [general]
 
