--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -61,7 +61,7 @@ general {
     col.active_border = rgba(e0dcd4aa)
     col.inactive_border = rgba(595959aa)
 
-    layout = dwindle
+    layout = master
 
     # Please see https://wiki.hypr.land/Configuring/Tearing/ before you turn this on
     allow_tearing = false
