hyprland: update settings for 27" monitor

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -1,14 +1,9 @@
 # Refer to the wiki for more information.
 # https://wiki.hypr.land/Configuring/
 
-# Straight 1x setup for low-resolution displays like 1080p or 1440p
-env = GDK_SCALE,1
-monitor=,preferred,auto,1
-
-$menu = walker
-$terminal = kitty
-$fileManager = thunar
-$browser = firefox
+#         name, resolution, position, scale
+monitor = DP-1, 2560x1440@120.00Hz, auto, 1
+env     = GDK_SCALE, 1
 
 exec-once = hyprpaper
 exec-once = waybar
