hyprland: configure keybindings for master layout
This mostly the DWM bindings.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -23,33 +23,32 @@ exec-once = systemctl --user start hyprpolkitagent
 
 exec-once = 1password --silent
 
-env = XCURSOR_THEME,Nordzy-cursors-white
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_THEME,Nordzy-cursors-white
-env = HYPRCURSOR_SIZE,24
-env = QT_QPA_PLATFORMTHEME,qt6ct
+env = XCURSOR_THEME,        Nordzy-cursors-white
+env = XCURSOR_SIZE,         24
+env = HYPRCURSOR_THEME,     Nordzy-cursors-white
+env = HYPRCURSOR_SIZE,      24
+env = QT_QPA_PLATFORMTHEME, qt6ct
 
 # Force all apps to use Wayland
-env = GDK_BACKEND,wayland,x11,*
-env = QT_QPA_PLATFORM,wayland;xcb
-env = QT_STYLE_OVERRIDE,kvantum
-env = SDL_VIDEODRIVER,wayland
-env = MOZ_ENABLE_WAYLAND,1
-env = ELECTRON_OZONE_PLATFORM_HINT,wayland
-env = OZONE_PLATFORM,wayland
-env = XDG_SESSION_TYPE,wayland
+env = GDK_BACKEND,                  wayland,x11,*
+env = QT_QPA_PLATFORM,              wayland;xcb
+env = QT_STYLE_OVERRIDE,            kvantum
+env = SDL_VIDEODRIVER,              wayland
+env = MOZ_ENABLE_WAYLAND,           1
+env = ELECTRON_OZONE_PLATFORM_HINT, wayland
+env = OZONE_PLATFORM,               wayland
+env = XDG_SESSION_TYPE,             wayland
 
 # Allow better support for screen sharing (Google Meet, Discord, etc)
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_DESKTOP,Hyprland
 
 general {
-    gaps_in = 5
-    gaps_out = 10
+    gaps_in = 3
+    gaps_out = 6
 
     border_size = 1
 
-    no_border_on_floating = true
     no_focus_fallback = true
     resize_on_border = true
 
@@ -118,9 +117,9 @@ animations {
 dwindle {
      # Master switch for pseudotiling. Enabling is bound to
      # mainMod + P in the keybinds section below
-    pseudotile = true
+    pseudotile     = true
     preserve_split = true	# You probably want this
-    force_split = 2             # Always split on the right
+    force_split    = 2          # Always split on the right
 }
 
 master {
@@ -129,11 +128,11 @@ master {
 
 # https://wiki.hypr.land/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = 0
+    force_default_wallpaper      = 0
     animate_mouse_windowdragging = true
-    animate_manual_resizes = true
-    disable_splash_rendering = true
-    focus_on_activate = true
+    animate_manual_resizes       = true
+    disable_splash_rendering     = true
+    focus_on_activate            = true
 }
 
 cursor {
@@ -142,14 +141,14 @@ cursor {
 
 # https://wiki.hypr.land/Configuring/Variables/#input
 input {
-    kb_layout = us
+    kb_layout  = us
     kb_variant =
-    kb_model =
+    kb_model   =
     kb_options = compose:menu
-    kb_rules =
+    kb_rules   =
 
     repeat_delay = 300
-    repeat_rate = 90
+    repeat_rate  = 90
 
     follow_mouse = 1
 
@@ -169,78 +168,68 @@ windowrulev2 = suppressevent maximize, class:.*
 windowrulev2 = workspace 1, class:^(emacs)$
 windowrulev2 = workspace 2, class:^(firefox)$
 
-# See https://wiki.hypr.land/Configuring/Keywords/
-$mainMod = SUPER
+#
+# KEYBINDINGS
+#
 
-bind = $mainMod,               Space,  exec, $menu
-bind = $mainMod,               Return, exec, $terminal
-bind = $mainMod,               B,      exec, $browser
-bind = $mainMod CONTROL SHIFT, E,      exec, $fileManager
-bind = $mainMod CONTROL,       S,      exec, hyprshot -m window
-bind = $mainMod CONTROL SHIFT, S,      exec, hyprshot -m region
+# App launching
+bind = Super,            Space,  exec, walker
+bind = Super+Ctrl,       Return, exec, kitty
+bind = Super,            B,      exec, firefox
+bind = Super+Ctrl+Shift, E,      exec, thunar
+bind = Super+Ctrl,       S,      exec, hyprshot -m window
+bind = Super+Ctrl+Shift, S,      exec, hyprshot -m region
 
-bind = $mainMod,       Q,      killactive,
-bind = $mainMod,       T,      togglefloating,
-bind = $mainMod,       P,      pseudo,         # dwindle
-bind = $mainMod,       J,      togglesplit,    # dwindle
-bind = ALT,            Tab,    cyclenext,
-bind = ALT SHIFT,      Tab,    cyclenext,      prev
-bind = $mainMod,       F,      fullscreen
-bind = $mainMod SHIFT, Escape, exit,
+# Window management
+bind = Super,       Q,     killactive
+bind = Super,       F,     fullscreen, 1 toggle
+bind = Super,       P,     pin
+bind = Super+Shift, Space, togglefloating
 
-# Move focus with mainMod + arrow keys
-bind = $mainMod, A, movefocus, l
-bind = $mainMod, E, movefocus, u
-bind = $mainMod, I, movefocus, d
-bind = $mainMod, H, movefocus, r
+bind = Super,       Return, layoutmsg, swapwithmaster master
+bind = Super,       E,      layoutmsg, cycleprev
+bind = Super,       I,      layoutmsg, cyclenext
+bind = Super+Shift, E,      layoutmsg, swapprev
+bind = Super+Shift, I,      layoutmsg, swapnext
+bind = Super+Shift, R,      layoutmsg, addmaster
+bind = Super+Shift, D,      layoutmsg, removemaster
 
-# Move active window with mainMod + SHIFT + arrow keys
-bind = $mainMod SHIFT, A, movewindow, l
-bind = $mainMod SHIFT, E, movewindow, u
-bind = $mainMod SHIFT, I, movewindow, d
-bind = $mainMod SHIFT, H, movewindow, r
+# Window resizing
+binde = Super+Shift, left,  resizeactive, -20   0
+binde = Super+Shift, right, resizeactive,  20   0
+binde = Super+Shift, up,    resizeactive,   0 -20
+binde = Super+Shift, down,  resizeactive,   0  20
 
-bind = $mainMod CONTROL, H, workspace, +1
-bind = $mainMod CONTROL, A, workspace, -1
+bindm = Super, mouse:272, movewindow
+bindm = Super, mouse:273, resizewindow
 
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
+# Workspaces
+bind = Super,  H,  workspace, +1
+bind = Super,  A,  workspace, -1
+bind = Super,  1,  workspace,  1
+bind = Super,  2,  workspace,  2
+bind = Super,  3,  workspace,  3
+bind = Super,  4,  workspace,  4
+bind = Super,  5,  workspace,  5
+bind = Super,  6,  workspace,  6
+bind = Super,  7,  workspace,  7
+bind = Super,  8,  workspace,  8
+bind = Super,  9,  workspace,  9
+bind = Super, 10,  workspace, 10
+bind = Super, Tab, workspace, previous
 
-bind = $mainMod CONTROL SHIFT, H, movetoworkspace, +1
-bind = $mainMod CONTROL SHIFT, A, movetoworkspace, -1
-
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-
-# Resizing
-binde = $mainMod CTRL SHIFT, left,  resizeactive, -20   0
-binde = $mainMod CTRL SHIFT, right, resizeactive,  20   0
-binde = $mainMod CTRL SHIFT, up,    resizeactive,   0 -20
-binde = $mainMod CTRL SHIFT, down,  resizeactive,   0  20
-
-# Example special workspace (scratchpad)
-bind = $mainMod,       S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace,        special:magic
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
+bind = Super+Shift,  H, movetoworkspace, +1
+bind = Super+Shift,  A, movetoworkspace, -1
+bind = Super+Shift,  1, movetoworkspace,  1
+bind = Super+Shift,  2, movetoworkspace,  2
+bind = Super+Shift,  3, movetoworkspace,  3
+bind = Super+Shift,  4, movetoworkspace,  4
+bind = Super+Shift,  5, movetoworkspace,  5
+bind = Super+Shift,  6, movetoworkspace,  6
+bind = Super+Shift,  7, movetoworkspace,  7
+bind = Super+Shift,  8, movetoworkspace,  8
+bind = Super+Shift,  9, movetoworkspace,  9
+bind = Super+Shift, 10, movetoworkspace, 10
 
 # Application-specific animation
 layerrule = noanim, walker
