--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,15 +1,14 @@
-font_family       Iosevka Nerd Font
-bold_font         auto
-italic_font       auto
-bold_italic_font  auto
+font_family      family='Monaspace Neon' postscript_name=MonaspaceNeon-Regular
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 
-font_size         10.0
+font_size        10
 
-background_opacity  0.92
-background_blur     2
-
-cursor_trail        3
-cursor_trail_decay  0.1 0.4
+font_features MonaspaceNeon-Regular        calt liga cv01=2 ss01 ss02 ss03 ss06 ss07 ss09
+font_features MonaspaceNeon-SemiBold       calt liga cv01=2 ss01 ss02 ss03 ss06 ss07 ss09
+font_features MonaspaceNeon-Italic         calt liga cv01=2 ss01 ss02 ss03 ss06 ss07 ss09
+font_features MonaspaceNeon-SemiBoldItalic calt liga cv01=2 ss01 ss02 ss03 ss06 ss07 ss09
 
 # Scriptorium Dark - The candlelit terminal
 background            #1a1d21
