hyprland: switch to 9 workspaces
Was 10.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -44,15 +44,15 @@ env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_DESKTOP,Hyprland
 
 general {
-    gaps_in = 3
+    gaps_in  = 3
     gaps_out = 6
 
     border_size = 1
 
     no_focus_fallback = true
-    resize_on_border = true
+    resize_on_border  = true
 
-    col.active_border = rgba(e0dcd4aa)
+    col.active_border   = rgba(e0dcd4aa)
     col.inactive_border = rgba(595959aa)
 
     layout = master
@@ -64,15 +64,15 @@ general {
 decoration {
     rounding = 3
 
-    active_opacity = 1.0
+    active_opacity   = 1.0
     inactive_opacity = 0.85
 
     blur {
-        enabled = true
-        size = 2
-        passes = 3
+        enabled           = true
+        size              = 2
+        passes            = 3
         new_optimizations = true
-        ignore_opacity = true
+        ignore_opacity    = true
     }
 }
 
@@ -82,19 +82,19 @@ group {
     col.border_locked_inactive = -1
 
     groupbar {
-        font_size = 12
-        font_family = sans-serif
-        font_weight_active = ultraheavy
+        font_size            = 12
+        font_family          = sans-serif
+        font_weight_active   = ultraheavy
         font_weight_inactive = normal
 
         indicator_height = 0
-        indicator_gap = 5
-        height = 22
-        gaps_in = 5
-        gaps_out = 0
+        indicator_gap    = 5
+        height           = 22
+        gaps_in          = 5
+        gaps_out         = 0
 
-        gradients = true
-        gradient_rounding = 0
+        gradients                 = true
+        gradient_rounding         = 0
         gradient_round_only_edges = false
     }
 }
@@ -115,10 +115,10 @@ animations {
 }
 
 dwindle {
-     # Master switch for pseudotiling. Enabling is bound to
-     # mainMod + P in the keybinds section below
+    # Master switch for pseudotiling. Enabling is bound to mainMod + P in the
+    # keybinds section below
     pseudotile     = true
-    preserve_split = true	# You probably want this
+    preserve_split = true       # You probably want this
     force_split    = 2          # Always split on the right
 }
 
@@ -148,12 +148,12 @@ input {
     kb_rules   =
 
     repeat_delay = 300
-    repeat_rate  = 90
+    repeat_rate  =  90
 
     follow_mouse = 1
 
     left_handed = true
-    sensitivity = -0.6		# -1.0 - 1.0, 0 means no modification.
+    sensitivity = -0.6          # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
         natural_scroll = false
@@ -213,7 +213,6 @@ bind = Super,  6,  workspace,  6
 bind = Super,  7,  workspace,  7
 bind = Super,  8,  workspace,  8
 bind = Super,  9,  workspace,  9
-bind = Super, 10,  workspace, 10
 bind = Super, Tab, workspace, previous
 
 bind = Super+Shift,  H, movetoworkspace, +1
@@ -227,7 +226,6 @@ bind = Super+Shift,  6, movetoworkspace,  6
 bind = Super+Shift,  7, movetoworkspace,  7
 bind = Super+Shift,  8, movetoworkspace,  8
 bind = Super+Shift,  9, movetoworkspace,  9
-bind = Super+Shift, 10, movetoworkspace, 10
 
 # Application-specific animation
 layerrule = noanim, walker
