hyprland: Make Super+Ctrl D invoke GoldenDict
GoldenDict is still flaky on Wayland. I’m having slightly more success with
the git package.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -23,6 +23,9 @@ exec-once = systemctl --user start hyprpolkitagent
 
 exec-once = 1password --silent
 
+exec-once = goldendict --group-name Main --popup-group-name Popup
+env = GOLDENDICT_FORCE_WAYLAND, 1
+
 env = XCURSOR_THEME,        Nordzy-cursors-white
 env = XCURSOR_SIZE,         24
 env = HYPRCURSOR_THEME,     Nordzy-cursors-white
@@ -32,7 +35,6 @@ env = QT_QPA_PLATFORMTHEME, qt6ct
 # Force all apps to use Wayland
 env = GDK_BACKEND,                  wayland,x11,*
 env = QT_QPA_PLATFORM,              wayland;xcb
-env = QT_STYLE_OVERRIDE,            kvantum
 env = SDL_VIDEODRIVER,              wayland
 env = MOZ_ENABLE_WAYLAND,           1
 env = ELECTRON_OZONE_PLATFORM_HINT, wayland
@@ -166,6 +168,11 @@ gesture = 3, horizontal, workspace
 # Window rules for applications
 windowrulev2 = suppressevent maximize, class:.*
 
+# GoldenDict popup - float and centre (title without hyphen)
+windowrulev2 = float,        class:.*goldendict_ng$, title:.* - GoldenDict-ng$
+windowrulev2 = center,       class:.*goldendict_ng$, title:.* - GoldenDict-ng$
+windowrulev2 = size 800 600, class:.*goldendict_ng$, title:.* - GoldenDict-ng$
+
 #
 # KEYBINDINGS
 #
@@ -177,6 +184,7 @@ bind = Super,            B,      exec, firefox
 bind = Super+Ctrl+Shift, E,      exec, thunar
 bind = Super+Ctrl,       S,      exec, hyprshot -m window
 bind = Super+Ctrl+Shift, S,      exec, hyprshot -m region
+bind = Super+Ctrl,       D,      exec, goldendict --popup $(wl-paste -n -p)
 
 # Window management
 bind = Super,       Q,     killactive
