hyperland: Bind Super-o to Obsidian on wspace 3

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -173,6 +173,8 @@ windowrulev2 = float,        class:.*goldendict_ng$, title:.* - GoldenDict-ng$
 windowrulev2 = center,       class:.*goldendict_ng$, title:.* - GoldenDict-ng$
 windowrulev2 = size 800 600, class:.*goldendict_ng$, title:.* - GoldenDict-ng$
 
+windowrulev2 = workspace 3, class:^(obsidian)$
+
 #
 # KEYBINDINGS
 #
@@ -181,6 +183,7 @@ windowrulev2 = size 800 600, class:.*goldendict_ng$, title:.* - GoldenDict-ng$
 bind = Super,            Space,  exec, walker
 bind = Super+Ctrl,       Return, exec, kitty
 bind = Super,            B,      exec, firefox
+bind = Super,            O,      exec, obsidian
 bind = Super+Ctrl+Shift, E,      exec, thunar
 bind = Super+Ctrl,       S,      exec, hyprshot -m window
 bind = Super+Ctrl+Shift, S,      exec, hyprshot -m region
