hyprland: remove keybinding for Thunar
It’s unnecessary.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -183,16 +183,17 @@ windowrulev2 = workspace 3, class:^(obsidian)$
 bind = Super,            Space,  exec, walker
 bind = Super+Ctrl,       Return, exec, kitty
 bind = Super,            B,      exec, firefox
+bind = Super+Ctrl,       D,      exec, goldendict --popup $(wl-paste -n -p)
+bind = Super,            E,      exec, emacsclient
+bind = Super+Ctrl,       E,      exec, emacs
 bind = Super,            O,      exec, obsidian
-bind = Super+Ctrl+Shift, E,      exec, thunar
 bind = Super+Ctrl,       S,      exec, hyprshot -m window
 bind = Super+Ctrl+Shift, S,      exec, hyprshot -m region
-bind = Super+Ctrl,       D,      exec, goldendict --popup $(wl-paste -n -p)
 
 # Window management
-bind = Super,       Q,     killactive
 bind = Super,       F,     fullscreen, 1 toggle
 bind = Super,       P,     pin
+bind = Super,       Q,     killactive
 bind = Super+Shift, Space, togglefloating
 
 bind = Super,       Return, layoutmsg, swapwithmaster master
