--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -3,7 +3,8 @@ bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
-font_size        10
+font_size          10
+adjust_line_height 120%
 
 font_features MonaspaceNeon-Regular        calt liga cv01=2 ss01 ss02 ss03 ss06 ss07 ss09
 font_features MonaspaceNeon-SemiBold       calt liga cv01=2 ss01 ss02 ss03 ss06 ss07 ss09
