--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,52 +1,55 @@
-font_family      family='Monaspace Neon' postscript_name=MonaspaceNeon-Regular
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
+font_family             family='Monaspace Neon' postscript_name=MonaspaceNeon-Regular
+bold_font               auto
+italic_font             auto
+bold_italic_font        auto
 
-font_size          10
-adjust_line_height 120%
+font_size               10
+adjust_line_height      120%
 
-font_features MonaspaceNeon-Regular        calt liga cv01=2 ss01 ss02 ss03 ss06 ss07 ss09
-font_features MonaspaceNeon-SemiBold       calt liga cv01=2 ss01 ss02 ss03 ss06 ss07 ss09
-font_features MonaspaceNeon-Italic         calt liga cv01=2 ss01 ss02 ss03 ss06 ss07 ss09
-font_features MonaspaceNeon-SemiBoldItalic calt liga cv01=2 ss01 ss02 ss03 ss06 ss07 ss09
+# Half the line-height (10 * 120% / 2):
+window_padding_width    6
+
+font_features MonaspaceNeon-Regular             calt liga cv01=2 ss01 ss02 ss03 ss06 ss07 ss09
+font_features MonaspaceNeon-SemiBold            calt liga cv01=2 ss01 ss02 ss03 ss06 ss07 ss09
+font_features MonaspaceNeon-Italic              calt liga cv01=2 ss01 ss02 ss03 ss06 ss07 ss09
+font_features MonaspaceNeon-SemiBoldItalic      calt liga cv01=2 ss01 ss02 ss03 ss06 ss07 ss09
 
 # Scriptorium Dark - The candlelit terminal
-background            #1a1d21
-foreground            #e0dcd4
-cursor                #dbcdb3
-cursor_text_color     background
-selection_foreground  #e0dcd4
-selection_background  #3d424a
+background              #1a1d21
+foreground              #e0dcd4
+cursor                  #dbcdb3
+cursor_text_color       background
+selection_foreground    #e0dcd4
+selection_background    #3d424a
 
 # Black
-color0   #1a1d21
-color8   #515761
+color0  #1a1d21
+color8  #515761
 
 # Red
-color1   #cdacac
-color9   #c8beb8
+color1  #cdacac
+color9  #c8beb8
 
 # Green
-color2   #b8c4b8
-color10  #b4beb4
+color2  #b8c4b8
+color10 #b4beb4
 
 # Yellow
-color3   #dbcdb3
-color11  #ccc4b0
+color3  #dbcdb3
+color11 #ccc4b0
 
 # Blue
-color4   #b4bcc4
-color12  #b4bcc4
+color4  #b4bcc4
+color12 #b4bcc4
 
 # Magenta
-color5   #c0b8bc
-color13  #c4beb8
+color5  #c0b8bc
+color13 #c4beb8
 
 # Cyan
-color6   #b0bcc8
-color14  #b0c0b8
+color6  #b0bcc8
+color14 #b0c0b8
 
 # White
-color7   #c0bdb8
-color15  #e0dcd4
+color7  #c0bdb8
+color15 #e0dcd4
