kitty: move theme settings to dedicated file

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -14,42 +14,5 @@ font_features MonaspaceNeon-SemiBold            calt liga cv01=2 ss01 ss02 ss03 
 font_features MonaspaceNeon-Italic              calt liga cv01=2 ss01 ss02 ss03 ss06 ss07 ss09
 font_features MonaspaceNeon-SemiBoldItalic      calt liga cv01=2 ss01 ss02 ss03 ss06 ss07 ss09
 
-# Scriptorium Dark - The candlelit terminal
-background              #1a1d21
-foreground              #e0dcd4
-cursor                  #dbcdb3
-cursor_text_color       background
-selection_foreground    #e0dcd4
-selection_background    #3d424a
-
-# Black
-color0  #1a1d21
-color8  #515761
-
-# Red
-color1  #cdacac
-color9  #c8beb8
-
-# Green
-color2  #b8c4b8
-color10 #b4beb4
-
-# Yellow
-color3  #dbcdb3
-color11 #ccc4b0
-
-# Blue
-color4  #b4bcc4
-color12 #b4bcc4
-
-# Magenta
-color5  #c0b8bc
-color13 #c4beb8
-
-# Cyan
-color6  #b0bcc8
-color14 #b0c0b8
-
-# White
-color7  #c0bdb8
-color15 #e0dcd4
+# Load the theme.
+include compline.conf
