gtk: tweak appearance settings

--- a/gtk/.config/gtk-4.0/settings.ini
+++ b/gtk/.config/gtk-4.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
-gtk-application-prefer-dark-theme = 1
-gtk-can-change-accels = 1
-gtk-xft-antialias = 1
-gtk-xft-hinting = 1
-gtk-xft-hintstyle = hintmedium
-gtk-xft-rgba = rgb
+gtk-theme-name=Granite
+gtk-icon-theme-name=Nordzy-yellow
+gtk-font-name=Inter Variable 10
+gtk-cursor-theme-name=Nordzy-cursors-white
+gtk-cursor-theme-size=24
+gtk-application-prefer-dark-theme=1
