--- a/gtk/.config/gtk-3.0/settings.ini
+++ b/gtk/.config/gtk-3.0/settings.ini
@@ -1,17 +1,17 @@
 [Settings]
-gtk-application-prefer-dark-theme=1
-gtk-theme-name=Adwaita
-gtk-icon-theme-name=Adwaita
-gtk-font-name=sans-serif-9
-gtk-cursor-theme-name=Adwaita
-gtk-button-images=1
-gtk-cursor-theme-size=0
-gtk-enable-event-sounds=1
-gtk-enable-input-feedback-sounds=1
-gtk-menu-images=1
+gtk-theme-name=Granite
+gtk-icon-theme-name=Nordzy-yellow
+gtk-font-name=Inter Variable 10
+gtk-cursor-theme-name=Nordzy-cursors-white
+gtk-cursor-theme-size=24
+gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-toolbar-icon-size=GTK_ICON_SIZE_SMALL_TOOLBAR
-gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
+gtk-button-images=1
+gtk-menu-images=1
+gtk-enable-event-sounds=1
+gtk-enable-input-feedback-sounds=0
 gtk-xft-antialias=1
 gtk-xft-hinting=1
-gtk-xft-hintstyle=hintslight
+gtk-xft-hintstyle=hintmedium
 gtk-xft-rgba=rgb
+gtk-application-prefer-dark-theme=1
