Switch the whole system’s theme to Solarized Light
This makes it much easier on my eyes. All these changes increase
clarity and readability of the text on screen.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -2,14 +2,12 @@
 # https://wiki.hypr.land/Configuring/
 
 #         name, resolution, position, scale
-monitor = DP-1, 2560x1440@120.00Hz, auto, 1
-env     = GDK_SCALE, 1
+monitor = DP-1, 2560x1440@120Hz, auto, 1.25
 
 exec-once = hyprpaper
 exec-once = waybar
 exec-once = hypridle
-exec-once = elephant
-exec-once = walker --gapplication-service
+exec-once = wlsunset -l -35.3 -L 149.1 -t 3700 -T 5500
 
 exec-once = swaync
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
@@ -23,177 +21,172 @@ exec-once = systemctl --user start hyprpolkitagent
 
 exec-once = 1password --silent
 
+exec-once = gnome-keyring-daemon --start --components=secrets
+
+env = SSH_AUTH_SOCK, $XDG_RUNTIME_DIR/gcr/ssh
+
 exec-once = goldendict --group-name Main --popup-group-name Popup
 env = GOLDENDICT_FORCE_WAYLAND, 1
 
-env = XCURSOR_THEME,        Nordzy-cursors-white
-env = XCURSOR_SIZE,         24
-env = HYPRCURSOR_THEME,     Nordzy-cursors-white
-env = HYPRCURSOR_SIZE,      24
-env = QT_QPA_PLATFORMTHEME, qt6ct
+env = XCURSOR_THEME,            Nordzy-cursors-white
+env = XCURSOR_SIZE,             24
+env = HYPRCURSOR_THEME,         Nordzy-cursors-white
+env = HYPRCURSOR_SIZE,          24
+env = QT_QPA_PLATFORMTHEME,     qt6ct
 
 # Force all apps to use Wayland
-env = GDK_BACKEND,                  wayland,x11,*
-env = QT_QPA_PLATFORM,              wayland;xcb
-env = SDL_VIDEODRIVER,              wayland
-env = MOZ_ENABLE_WAYLAND,           1
-env = ELECTRON_OZONE_PLATFORM_HINT, wayland
-env = OZONE_PLATFORM,               wayland
-env = XDG_SESSION_TYPE,             wayland
+env = GDK_BACKEND,                      wayland,x11,*
+env = QT_QPA_PLATFORM,                  wayland;xcb
+env = SDL_VIDEODRIVER,                  wayland
+env = MOZ_ENABLE_WAYLAND,               1
+env = ELECTRON_OZONE_PLATFORM_HINT,     wayland
+env = OZONE_PLATFORM,                   wayland
+env = XDG_SESSION_TYPE,                 wayland
 
 # Allow better support for screen sharing (Google Meet, Discord, etc)
-env = XDG_CURRENT_DESKTOP,Hyprland
-env = XDG_SESSION_DESKTOP,Hyprland
+env = XDG_CURRENT_DESKTOP,              Hyprland
+env = XDG_SESSION_DESKTOP,              Hyprland
+
+# Font rendering
+env = FREETYPE_PROPERTIES,              truetype:interpreter-version=38
+env = GDK_SCALE,                        1.25
+env = GDK_DPI_SCALE,                    0.8
+env = QT_AUTO_SCREEN_SCALE_FACTOR,      1
+env = QT_SCALE_FACTOR,                  1.25
 
 general {
-    gaps_in  = 3
-    gaps_out = 6
-
-    border_size = 1
-
-    no_focus_fallback = true
-    resize_on_border  = true
-
-    col.active_border   = rgba(e0dcd4aa)
-    col.inactive_border = rgba(595959aa)
-
-    layout = master
+    gaps_in             = 3
+    gaps_out            = 6
+    border_size         = 2
+    no_focus_fallback   = true
+    resize_on_border    = true
+    col.active_border   = rgba(268bd2ff)
+    col.inactive_border = rgba(93a1a1ff)
+    layout              = master
 
     # Please see https://wiki.hypr.land/Configuring/Tearing/ before you turn this on
-    allow_tearing = false
+    allow_tearing       = false
 }
 
 decoration {
-    rounding = 3
-
-    active_opacity   = 1.0
-    inactive_opacity = 0.85
+    rounding    = 3
 
     blur {
-        enabled           = true
-        size              = 2
-        passes            = 3
-        new_optimizations = true
-        ignore_opacity    = true
+        enabled = false
     }
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#group
 group {
-    col.border_locked_active = -1
-    col.border_locked_inactive = -1
+    col.border_locked_active    = -1
+    col.border_locked_inactive  = -1
 
     groupbar {
-        font_size            = 12
-        font_family          = sans-serif
-        font_weight_active   = ultraheavy
-        font_weight_inactive = normal
-
-        indicator_height = 0
-        indicator_gap    = 5
-        height           = 22
-        gaps_in          = 5
-        gaps_out         = 0
-
-        gradients                 = true
-        gradient_rounding         = 0
-        gradient_round_only_edges = false
+        font_size                       = 12
+        font_family                     = sans-serif
+        font_weight_active              = ultraheavy
+        font_weight_inactive            = normal
+        indicator_height                = 0
+        indicator_gap                   = 5
+        height                          = 22
+        gaps_in                         = 5
+        gaps_out                        = 0
+        gradients                       = true
+        gradient_rounding               = 0
+        gradient_round_only_edges       = false
     }
 }
 
 animations {
-    enabled = yes
+    enabled     = yes
 
     # Smooth bezier curves
-    bezier = myBezier,     0.05, 0.7, 0.1,  1.0
-    bezier = easeOutQuint, 0.22, 1.0, 0.36, 1.0
+    bezier      = myBezier,     0.05, 0.7, 0.1,  1.0
+    bezier      = easeOutQuint, 0.22, 1.0, 0.36, 1.0
 
     # Increased durations to make animations more noticeable
-    animation = windows,    0.7, 4, myBezier,     popin
-    animation = windowsOut, 0.6, 3, default,      popin 80%
-    animation = border,     0.4, 3, default
-    animation = fade,       0.4, 3, default
-    animation = workspaces, 0.8, 3, easeOutQuint, slide
+    animation   = windows,    0.7, 4, myBezier,     popin
+    animation   = windowsOut, 0.6, 3, default,      popin 80%
+    animation   = border,     0.4, 3, default
+    animation   = fade,       0.4, 3, default
+    animation   = workspaces, 0.8, 3, easeOutQuint, slide
 }
 
 dwindle {
     # Master switch for pseudotiling. Enabling is bound to mainMod + P in the
     # keybinds section below
-    pseudotile     = true
-    preserve_split = true       # You probably want this
-    force_split    = 2          # Always split on the right
+    pseudotile          = true
+    preserve_split      = true  # You probably want this
+    force_split         = 2     # Always split on the right
 }
 
 master {
-    new_status = master
+    new_status  = master
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper      = 0
-    animate_mouse_windowdragging = true
-    animate_manual_resizes       = true
-    disable_splash_rendering     = true
-    focus_on_activate            = true
+    force_default_wallpaper             = 0
+    animate_mouse_windowdragging        = true
+    animate_manual_resizes              = true
+    disable_splash_rendering            = true
+    focus_on_activate                   = true
 }
 
 cursor {
-    hide_on_key_press = true
+    hide_on_key_press   = true
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#input
 input {
-    kb_layout  = us
-    kb_variant =
-    kb_model   =
-    kb_options = compose:menu
-    kb_rules   =
-
-    repeat_delay = 300
-    repeat_rate  =  90
-
-    follow_mouse = 1
-
-    left_handed = true
-    sensitivity = -0.6          # -1.0 - 1.0, 0 means no modification.
+    kb_layout           = us
+    kb_variant          =
+    kb_model            =
+    kb_options          = compose:menu
+    kb_rules            =
+    repeat_delay        = 300
+    repeat_rate         = 90
+    follow_mouse        = 1
+    left_handed         = true
+    sensitivity         = -0.6
 
     touchpad {
-        natural_scroll = false
+        natural_scroll  = false
     }
 }
 
 # See https://wiki.hypr.land/Configuring/Gestures
-gesture = 3, horizontal, workspace
+gesture         = 3, horizontal, workspace
 
 # Window rules for applications
-windowrulev2 = suppressevent maximize, class:.*
+windowrulev2    = suppressevent maximize, class:.*
 
 # GoldenDict popup - float and centre (title without hyphen)
-windowrulev2 = float,        class:.*goldendict_ng$, title:.* - GoldenDict-ng$
-windowrulev2 = center,       class:.*goldendict_ng$, title:.* - GoldenDict-ng$
-windowrulev2 = size 800 600, class:.*goldendict_ng$, title:.* - GoldenDict-ng$
+windowrulev2    = float,        class:.*goldendict_ng$, title:.* - GoldenDict-ng$
+windowrulev2    = center,       class:.*goldendict_ng$, title:.* - GoldenDict-ng$
+windowrulev2    = size 800 600, class:.*goldendict_ng$, title:.* - GoldenDict-ng$
 
-windowrulev2 = workspace 3, class:^(obsidian)$
+windowrulev2    = workspace 3, class:^(obsidian)$
 
 #
 # KEYBINDINGS
 #
 
 # App launching
-bind = Super,            Space,  exec, walker
-bind = Super+Ctrl,       Return, exec, kitty
-bind = Super,            B,      exec, firefox
-bind = Super+Ctrl,       D,      exec, goldendict --popup $(wl-paste -n -p)
-bind = Super,            E,      exec, emacsclient
-bind = Super+Ctrl,       E,      exec, emacs
-bind = Super,            O,      exec, obsidian
-bind = Super+Ctrl,       S,      exec, hyprshot -m window
-bind = Super+Ctrl+Shift, S,      exec, hyprshot -m region
+bind = Super,                   Space,  exec, wofi --show drun
+bind = Super+Ctrl,              Return, exec, kitty
+bind = Super,                   B,      exec, firefox
+bind = Super+Ctrl,              D,      exec, goldendict --popup $(wl-paste -n -p)
+bind = Super,                   E,      exec, emacsclient
+bind = Super+Ctrl,              E,      exec, emacs
+bind = Super,                   O,      exec, obsidian
+bind = Super+Ctrl,              S,      exec, hyprshot -m window
+bind = Super+Ctrl+Shift,        S,      exec, hyprshot -m region
 
 # Window management
 bind = Super,       F,     fullscreen, 1 toggle
 bind = Super,       P,     pin
-bind = Super,       Q,     killactive
+bind = Super,       W,     killactive
 bind = Super+Shift, Space, togglefloating
 
 bind = Super,       Return, layoutmsg, swapwithmaster master
