--- a/hyprpaper/.config/hypr/hyprpaper.conf
+++ b/hyprpaper/.config/hypr/hyprpaper.conf
@@ -1,2 +1,6 @@
-preload = ~/.config/wallpapers/stmichael.jpg
-wallpaper = , ~/.config/wallpapers/stmichael.jpg
+# preload = ~/Downloads/solarized-master-wallpapers-solarized/wallpapers-solarized/thinkpad.jpg
+# wallpaper = , ~/Downloads/solarized-master-wallpapers-solarized/wallpapers-solarized/thinkpad.jpg
+# preload = ~/Downloads/solarized-master-wallpapers-solarized/wallpapers-solarized/geom.png
+# wallpaper = , ~/Downloads/solarized-master-wallpapers-solarized/wallpapers-solarized/geom.png
+preload = ~/.config/wallpapers/crow.png
+wallpaper = , ~/.config/wallpapers/crow.png
