--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -2,69 +2,79 @@
   "reload_style_on_change": true,
   "layer": "top",
   "position": "top",
-  "spacing": 0,
-  "height": 26,
+  "height": 28,
+  "spacing": 8,
+
   "modules-left": ["hyprland/workspaces"],
   "modules-center": ["clock"],
   "modules-right": [
+    "keyboard-state",
     "idle_inhibitor",
     "pulseaudio",
     "network",
     "cpu",
     "memory",
-    "tray"
+    "tray",
+    "custom/power"
   ],
+
   "hyprland/workspaces": {
-    "on-click": "activate",
-    "disable-scroll": true,
-    "all-outputs": true,
     "format": "{icon}",
+    "on-click": "activate",
+    "sort-by-number": true,
+    "all-outputs": true,
     "persistent-workspaces": {
-      "1": [],
-      "2": [],
-      "3": [],
-      "4": [],
-      "5": [],
-      "6": [],
-      "7": [],
-      "8": [],
-      "9": []
+      "*": 9
     },
     "format-icons": {
-      "1": "Ⅰ",
-      "2": "Ⅱ",
-      "3": "Ⅲ",
-      "4": "Ⅳ",
-      "5": "Ⅴ",
-      "6": "Ⅵ",
-      "7": "Ⅶ",
-      "8": "Ⅷ",
-      "9": "Ⅸ"
+      "1": "I",
+      "2": "II",
+      "3": "III",
+      "4": "IV",
+      "5": "V",
+      "6": "VI",
+      "7": "VII",
+      "8": "VIII",
+      "9": "IX"
     }
   },
+
+  "clock": {
+    "format": "{:%A %d %B  %H:%M}",
+    "tooltip-format": "<tt><small>{calendar}</small></tt>",
+    "calendar": {
+      "mode": "month",
+      "format": {
+        "months": "<span color='#268bd2'><b>{}</b></span>",
+        "days": "<span color='#586e75'>{}</span>",
+        "today": "<span color='#dc322f'><b><u>{}</u></b></span>"
+      }
+    }
+  },
+
+  "keyboard-state": {
+    "capslock": true,
+    "format": {
+      "capslock": "{icon}"
+    },
+    "format-icons": {
+      "locked": "CAPS",
+      "unlocked": ""
+    }
+  },
+
   "idle_inhibitor": {
     "format": "{icon}",
     "format-icons": {
       "activated": "",
       "deactivated": ""
-    }
-  },
-  "keyboard-state": {
-    "scrolllock": true,
-    "capslock": true,
-    "numlock": true,
-    "format": {
-      "scrolllock": "S {icon}",
-      "capslock": "C {icon}",
-      "numlock": "N {icon}"
     },
-    "format-icons": {
-      "locked": "",
-      "unlocked": ""
-    }
+    "tooltip-format-activated": "Idle inhibitor active",
+    "tooltip-format-deactivated": "Idle inhibitor inactive"
   },
+
   "pulseaudio": {
-    "format": "{icon}  {volume}%",
+    "format": "{icon}   {volume}%",
     "format-muted": "",
     "format-icons": {
       "default": ["", "", ""]
@@ -72,11 +82,12 @@
     "scroll-step": 5,
     "on-click": "pavucontrol"
   },
+
   "network": {
     "format-icons": ["󰤯", "󰤟", "󰤢", "󰤥", "󰤨"],
     "format": "{icon}",
     "format-wifi": " {essid} ({signalStrength}%)",
-    "format-ethernet": "󰛳 {ipaddr}",
+    "format-ethernet": "󰛳  {ipaddr}",
     "format-linked": " {ifname} (No IP)",
     "format-disconnected": "󰤮",
     "format-alt": "{ifname}: {ipaddr}/{cidr}",
@@ -84,25 +95,30 @@
     "tooltip-format-ethernet": "⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}",
     "tooltip-format-disconnected": "Disconnected",
     "interval": 3,
-    "spacing": 1,
     "on-click": "xdg-terminal-exec btop"
   },
+
   "cpu": {
-    "interval": 5,
-    "format": "󰍛 {usage}%",
-    "on-click": "xdg-terminal-exec btop"
+    "format": "󰍛  {usage}%",
+    "tooltip": true,
+    "on-click": "xdg-terminal-exec btop",
+    "interval": 2
   },
+
   "memory": {
-    "format": "󰘚 {}%",
+    "format": "󰘚  {}%",
+    "tooltip-format": "{used:0.1f}G / {total:0.1f}G used",
     "on-click": "xdg-terminal-exec btop"
   },
-  "clock": {
-    "format": "{:%A %d %B %H:%M}",
-    "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-    "format-alt": "{:%Y-%m-%d}"
-  },
+
   "tray": {
-    "icon-size": 12,
-    "spacing": 17
+    "icon-size": 18,
+    "spacing": 8
+  },
+
+  "custom/power": {
+    "format": "",
+    "tooltip": false,
+    "on-click": "wlogout"
   }
 }
