--- a/btop/.config/btop/btop.conf
+++ b/btop/.config/btop/btop.conf
@@ -2,10 +2,10 @@
 
 #* Name of a btop++/bpytop/bashtop formatted ".theme" file, "Default" and "TTY" for builtin themes.
 #* Themes should be placed in "../share/btop/themes" relative to binary or "$HOME/.config/btop/themes"
-color_theme = "compline.theme"
+color_theme = "$HOME/.config/btop/themes/solarized-light.theme"
 
 #* If the theme set background should be shown, set to False if you want terminal background transparency.
-theme_background = False
+theme_background = True
 
 #* Sets if 24-bit truecolor should be used, will convert 24-bit colors to 256 color (6x6x6 color cube) if false.
 truecolor = True
@@ -50,14 +50,14 @@ graph_symbol_net = "default"
 graph_symbol_proc = "default"
 
 #* Manually set which boxes to show. Available values are "cpu mem net proc" and "gpu0" through "gpu5", separate values with whitespace.
-shown_boxes = "proc cpu mem net"
+shown_boxes = "proc mem net cpu"
 
 #* Update time in milliseconds, recommended 2000 ms or above for better sample times for graphs.
 update_ms = 1500
 
 #* Processes sorting, "pid" "program" "arguments" "threads" "user" "memory" "cpu lazy" "cpu direct",
 #* "cpu lazy" sorts top process over time (easier to follow), "cpu direct" updates top process directly.
-proc_sorting = "cpu lazy"
+proc_sorting = "memory"
 
 #* Reverse sorting order, True or False.
 proc_reversed = False
