--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,18 +1,29 @@
-font_family             family='Monaspace Neon' postscript_name=MonaspaceNeon-Regular
-bold_font               auto
-italic_font             auto
-bold_italic_font        auto
+font_family             JetBrains Mono
+bold_font               JetBrains Mono Bold
+italic_font             JetBrains Mono Italic
+bold_italic_font        JetBrains Mono Bold Italic
 
-font_size               10
-adjust_line_height      120%
+font_size               9.0
+adjust_line_height      110%
 
-# Half the line-height (10 * 120% / 2):
-window_padding_width    6
+# Disable ligatures (can blur with astigmatism)
+disable_ligatures       always
 
-font_features MonaspaceNeon-Regular             calt liga cv01=2 ss01 ss02 ss03 ss06 ss07 ss09
-font_features MonaspaceNeon-SemiBold            calt liga cv01=2 ss01 ss02 ss03 ss06 ss07 ss09
-font_features MonaspaceNeon-Italic              calt liga cv01=2 ss01 ss02 ss03 ss06 ss07 ss09
-font_features MonaspaceNeon-SemiBoldItalic      calt liga cv01=2 ss01 ss02 ss03 ss06 ss07 ss09
+# Font features
+# modify_font             cell_height 110%
+
+# Cursor
+cursor_shape            block
+
+# Half the line-height (9 * 110% / 2):
+window_padding_width    5
+
+# URL handling
+url_color               #268bd2
+url_style               single
+
+# Clipboard
+copy_on_select          yes
 
 # Load the theme.
-include compline.conf
+include solarized-light.conf
