hyprland: improve the trackball config
This change is a general overhaul of the config of my Kensington
SlimBlade Pro trackball.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -144,15 +144,26 @@ input {
     kb_model            =
     kb_options          = compose:menu
     kb_rules            =
+
     repeat_delay        = 300
     repeat_rate         = 90
     follow_mouse        = 1
-    left_handed         = true
-    sensitivity         = -0.6
 
     touchpad {
         natural_scroll  = false
     }
+}
+
+device {
+    name                = kensington-slimblade-pro-trackball(wired)-kensington-slimblade-pro-trackball(wired)
+    accel_profile       = flat
+    scroll_factor       = 0.25
+
+    # Button layout:
+    # Top left:     BTN_MIDDLE (274)
+    # Top right:    BTN_SIDE (275)
+    # Bottom left:  BTN_LEFT (272)
+    # Bottom right: BTN_RIGHT (273)
 }
 
 # See https://wiki.hypr.land/Configuring/Gestures
@@ -173,38 +184,42 @@ windowrulev2    = workspace 3, class:^(obsidian)$
 #
 
 # App launching
-bind = Super,                   Space,  exec, wofi --show drun
-bind = Super+Ctrl,              Return, exec, kitty
-bind = Super,                   B,      exec, firefox
-bind = Super+Ctrl,              D,      exec, goldendict --popup $(wl-paste -n -p)
-bind = Super,                   E,      exec, emacsclient
-bind = Super+Ctrl,              E,      exec, emacs
-bind = Super,                   O,      exec, obsidian
-bind = Super+Ctrl,              S,      exec, hyprshot -m window
-bind = Super+Ctrl+Shift,        S,      exec, hyprshot -m region
+bind = Super,                   Space,          exec, wofi --show drun
+bind = Super+Ctrl,              Return,         exec, kitty
+bind = Super,                   B,              exec, firefox
+bind = Super,                   mouse:275,      exec, firefox
+bind = Super+Ctrl,              D,              exec, goldendict --popup $(wl-paste -n -p)
+bind = Super,                   E,              exec, emacsclient --create-frame --no-wait --alternate-editor='' --quiet
+bind = Super,                   mouse:274,      exec, emacsclient --create-frame --no-wait --alternate-editor='' --quiet
+bind = Super+Ctrl,              E,              exec, emacs
+bind = Super,                   O,              exec, obsidian
+bind = Super+Ctrl,              S,              exec, hyprshot -m window
+bind = Super+Ctrl+Shift,        S,              exec, hyprshot -m region
 
 # Window management
-bind = Super,       F,     fullscreen, 0 toggle
-bind = Super,       P,     pin
-bind = Super,       W,     killactive
-bind = Super+Shift, Space, togglefloating
+bind = Super,           F,              fullscreen, 0 toggle
+bind = Super,           P,              pin
+bind = Super+Shift,     Space,          togglefloating
+bind = Super,           mouse:272,      togglefloating
+bind = Super,           W,              killactive
+bind = Super,           mouse:273,      killactive
 
-bind = Super,       Return, layoutmsg, swapwithmaster master
-bind = Super,       E,      layoutmsg, cycleprev
-bind = Super,       I,      layoutmsg, cyclenext
-bind = Super+Shift, E,      layoutmsg, swapprev
-bind = Super+Shift, I,      layoutmsg, swapnext
-bind = Super+Shift, R,      layoutmsg, addmaster
-bind = Super+Shift, D,      layoutmsg, removemaster
+bind = Super,           Return, layoutmsg, swapwithmaster master
+bind = Super,           E,      layoutmsg, cycleprev
+bind = Super,           I,      layoutmsg, cyclenext
+bind = Super+Shift,     E,      layoutmsg, swapprev
+bind = Super+Shift,     I,      layoutmsg, swapnext
+bind = Super+Shift,     R,      layoutmsg, addmaster
+bind = Super+Shift,     D,      layoutmsg, removemaster
 
 # Window resizing
-binde = Super+Shift, left,  resizeactive, -20   0
-binde = Super+Shift, right, resizeactive,  20   0
-binde = Super+Shift, up,    resizeactive,   0 -20
-binde = Super+Shift, down,  resizeactive,   0  20
+binde = Super+Shift,    left,  resizeactive, -20   0
+binde = Super+Shift,    right, resizeactive,  20   0
+binde = Super+Shift,    up,    resizeactive,   0 -20
+binde = Super+Shift,    down,  resizeactive,   0  20
 
-bindm = Super, mouse:272, movewindow
-bindm = Super, mouse:273, resizewindow
+bindm = Super,          mouse:272, movewindow
+bindm = Super,          mouse:273, resizewindow
 
 # Workspaces
 bind = Super,  H,  workspace, +1
